# galaxium-travels-graph-rag-watsonx-ai-example

./: .gitignore  README.md
code/langgraph-graph-rag/: CHANGES.rst  README.md  ai_service.py  config.toml.example  pyproject.toml  template.env
code/langgraph-graph-rag/schema/: request.json  response.json
code/langgraph-graph-rag/scripts/: _interactive_chat.py  convert_pdf_to_markdown.py  create_graph.sh  create_knowledge_graph.py  execute_ai_service_locally.py  run_convert_pdf_to_markdown.sh  run_existing_neo4j_container.sh  run_local_chat.sh  run_new_neo4j_container.sh
code/langgraph-graph-rag/scripts/input_data/: company_overview.md
code/langgraph-graph-rag/scripts/output_data/: READMY.md
code/langgraph-graph-rag/scripts/prompts_and_additional_instructions/: company_profile_additional_instructions.md  company_profile_additional_instructions_v1.md  company_profile_prompt.md  company_profile_prompt_v1.md  company_profile_prompt_v2.md
code/langgraph-graph-rag/src/langgraph_graph_rag/: agent.py  nodes.py
code/local_monitoring/: docker-compose.yml  start_langfuse.sh
